Regression, BMS, BMA

--- a/src/readData.ipynb
+++ b/src/readData.ipynb
@@ -2,266 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loadSubjectData (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "include(\"readData.jl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub1 = loadSubjectData(getFilename(1));"
+    "using JLD2, FileIO, Printf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1426×306×321 Array{Float64,3}:\n",
-       "[:, :, 1] =\n",
-       "  6.13979e-14   5.21723e-14   3.04582e-15  …   1.2838e-12    6.51323e-13\n",
-       " -1.45486e-13  -8.56473e-14  -2.53652e-13     -5.0346e-12   -3.33798e-12\n",
-       " -1.77411e-13  -2.90721e-13  -3.77512e-13     -1.23906e-12  -3.1521e-14 \n",
-       " -2.28347e-13  -3.08908e-13  -2.3151e-13      -1.60903e-13   3.47363e-12\n",
-       "  9.76807e-14   1.70691e-13   2.60468e-13      1.58506e-12   3.38602e-12\n",
-       "  2.46907e-13   3.45212e-13   3.32461e-13  …  -2.16011e-12  -5.38664e-12\n",
-       " -2.73564e-14   1.3868e-13    1.24876e-13     -3.41305e-12  -1.1959e-12 \n",
-       " -5.47941e-14  -2.38568e-13  -2.60083e-13     -8.16977e-13  -2.02444e-13\n",
-       " -1.74073e-13  -2.25279e-14  -5.98633e-14     -1.23592e-12   3.56471e-12\n",
-       "  1.11198e-13   9.44247e-14   1.52267e-13      1.45213e-12   4.56554e-12\n",
-       " -1.14362e-14   1.90778e-13   2.39622e-13  …   1.44383e-13  -2.0579e-12 \n",
-       "  9.09614e-14   5.02513e-14   3.2247e-14      -3.31015e-13  -6.5427e-13 \n",
-       " -1.04316e-13   2.37852e-14   1.92931e-13      3.04977e-12  -1.47665e-14\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       " -1.09287e-13  -6.37359e-14   1.99421e-16      4.78115e-13  -1.74264e-12\n",
-       " -1.46666e-13   7.31342e-14  -8.64403e-14  …  -8.08909e-13  -6.93297e-14\n",
-       " -3.78464e-15   2.21769e-14   6.96814e-14      3.2518e-12    2.81773e-12\n",
-       "  2.5575e-13    1.39061e-13   2.58618e-13     -5.0731e-13   -5.76079e-12\n",
-       "  4.95287e-14  -5.29042e-14  -1.10746e-13     -3.17042e-12  -2.19493e-12\n",
-       " -6.94812e-14   1.04548e-13   3.24933e-14     -7.19206e-13  -1.13259e-12\n",
-       " -2.91556e-14  -1.47296e-13  -8.7031e-14   …  -2.0621e-12    5.35946e-13\n",
-       " -1.43926e-13   1.02137e-13  -5.36538e-14      5.75367e-13   6.78958e-12\n",
-       " -4.88599e-14  -2.06212e-15  -1.68995e-13     -2.68526e-12  -1.07573e-12\n",
-       " -4.74266e-14  -1.7177e-13   -1.33335e-13     -7.228e-13     2.35073e-12\n",
-       " -2.61776e-13  -2.14718e-13  -2.2128e-13       8.56674e-13  -2.63202e-12\n",
-       " -1.30938e-13  -1.55551e-14  -7.09154e-14  …   2.58278e-12  -1.30514e-12\n",
-       "\n",
-       "[:, :, 2] =\n",
-       "  6.46931e-14   4.93652e-14   3.75315e-14  …   1.06745e-12   7.38579e-14\n",
-       " -1.54688e-13  -1.04073e-13  -2.70443e-13     -4.5781e-12   -1.75552e-12\n",
-       " -2.0679e-13   -2.88725e-13  -3.56859e-13     -1.54499e-12   7.56854e-15\n",
-       " -2.80899e-13  -3.35279e-13  -2.56643e-13     -9.51304e-13   1.68931e-12\n",
-       "  1.04406e-13   1.73155e-13   2.36962e-13      1.05502e-12   2.07866e-12\n",
-       "  2.8918e-13    3.85672e-13   3.77485e-13  …  -1.49486e-12  -5.04793e-12\n",
-       " -7.15084e-14   8.59507e-14   6.50412e-14     -3.13187e-12  -1.09932e-12\n",
-       " -8.83344e-14  -2.79908e-13  -2.94354e-13     -7.12203e-13   1.29069e-12\n",
-       " -1.85252e-13  -3.14877e-15  -6.2328e-14      -2.47088e-12   2.74154e-12\n",
-       "  5.5162e-14    7.19264e-14   1.55815e-13      1.42173e-12   3.22993e-12\n",
-       " -2.26152e-14   1.90677e-13   2.33566e-13  …  -6.04306e-13  -2.75781e-12\n",
-       "  1.55168e-13   1.08037e-13   6.97782e-14     -9.86987e-13  -1.36911e-12\n",
-       " -1.37878e-13  -8.63266e-15   1.60639e-13      2.48783e-12  -8.03052e-13\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       " -1.04928e-13  -4.3556e-14    2.46344e-14     -1.00874e-12  -2.87363e-12\n",
-       " -1.4569e-13    3.46752e-14  -1.10391e-13  …   8.00375e-13   5.28511e-13\n",
-       " -1.93762e-14   4.51366e-14   8.18352e-14      2.68063e-12   2.15909e-12\n",
-       "  2.34996e-13   7.49012e-14   1.97098e-13     -1.35527e-12  -5.89482e-12\n",
-       "  5.50702e-14  -4.76232e-14  -9.70636e-14     -5.88777e-12  -3.52917e-12\n",
-       " -9.4469e-14    8.83928e-14   2.13944e-14      8.95095e-13   3.08361e-13\n",
-       " -3.87575e-14  -1.72702e-13  -1.13195e-13  …  -1.85452e-12   9.83031e-13\n",
-       " -1.57882e-13   1.30172e-13  -1.33119e-14     -2.40106e-13   5.12633e-12\n",
-       " -1.12755e-13  -9.69315e-14  -2.26841e-13     -2.42473e-12  -1.349e-13  \n",
-       " -3.7038e-14   -1.34876e-13  -1.02896e-13     -1.23582e-12   3.65809e-12\n",
-       " -2.38354e-13  -1.97127e-13  -1.92695e-13      1.79323e-12  -2.62176e-12\n",
-       " -1.40777e-13  -3.45554e-14  -8.40761e-14  …   1.93654e-12  -1.52908e-12\n",
-       "\n",
-       "[:, :, 3] =\n",
-       "  6.72183e-14   4.59211e-14   6.54938e-14  …   5.1521e-13   -1.93171e-13\n",
-       " -1.55064e-13  -1.07752e-13  -2.65094e-13     -3.02806e-12  -2.01322e-14\n",
-       " -2.0616e-13   -2.51326e-13  -2.98078e-13     -1.66476e-12  -2.03793e-13\n",
-       " -2.86002e-13  -3.12952e-13  -2.37995e-13     -1.91875e-12   1.58518e-13\n",
-       "  1.12895e-13   1.6309e-13    1.915e-13        9.16953e-13   1.10576e-12\n",
-       "  2.93056e-13   3.79896e-13   3.70118e-13  …  -1.04548e-12  -4.44262e-12\n",
-       " -1.12036e-13   4.14637e-14   2.02813e-14     -2.28987e-12  -1.10726e-12\n",
-       " -1.10102e-13  -3.17402e-13  -3.1429e-13      -5.40684e-13   2.63414e-12\n",
-       " -2.02906e-13  -1.60165e-15  -7.18499e-14     -3.5225e-12    1.81651e-12\n",
-       "  1.39392e-14   3.93809e-14   1.57184e-13      7.20911e-13   1.37815e-12\n",
-       "  4.68604e-15   2.21469e-13   2.61761e-13  …  -7.34486e-13  -3.20815e-12\n",
-       "  2.08689e-13   1.41316e-13   7.61528e-14     -1.31869e-12  -2.07308e-12\n",
-       " -1.72536e-13  -3.95132e-14   1.22819e-13      1.67842e-12  -1.61045e-12\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       " -8.79995e-14  -1.59542e-14   4.12283e-14     -2.32137e-12  -3.44613e-12\n",
-       " -1.4933e-13    4.08414e-17  -1.32214e-13  …   2.39782e-12   1.06555e-12\n",
-       " -5.44643e-14   5.66504e-14   8.75607e-14      1.4276e-12    1.32392e-12\n",
-       "  2.30613e-13   3.60793e-14   1.60052e-13     -1.3203e-12   -4.88455e-12\n",
-       "  6.07172e-14  -3.41151e-14  -8.50726e-14     -7.72923e-12  -4.28528e-12\n",
-       " -9.41329e-14   8.56193e-14   1.95559e-14      1.87758e-12   1.37129e-12\n",
-       " -4.37587e-14  -1.95506e-13  -1.32705e-13  …  -1.12696e-12   1.43229e-12\n",
-       " -1.69777e-13   1.36346e-13   2.89814e-15     -4.90053e-13   3.42823e-12\n",
-       " -1.58827e-13  -1.57799e-13  -2.50832e-13     -2.08884e-12   6.49504e-13\n",
-       " -1.93537e-14  -8.46851e-14  -6.28652e-14     -4.46254e-13   5.7301e-12 \n",
-       " -2.09448e-13  -1.8809e-13   -1.58016e-13      2.94715e-12  -1.48169e-12\n",
-       " -1.50942e-13  -5.78841e-14  -9.30405e-14  …   8.89133e-13  -1.94399e-12\n",
-       "\n",
-       "...\n",
-       "\n",
-       "[:, :, 319] =\n",
-       " -4.78713e-13  -4.19019e-13  -5.81574e-13  …   1.94347e-12   9.96791e-13\n",
-       " -2.63266e-14   1.43761e-13   1.68332e-13      2.44765e-13  -3.33556e-12\n",
-       "  1.32978e-13   1.29272e-13   1.91399e-13      5.72324e-13  -3.29872e-12\n",
-       " -1.36687e-13  -1.31826e-13  -1.21955e-13     -4.71869e-12  -1.74484e-13\n",
-       "  1.35092e-13   2.16041e-13   1.24914e-13     -1.37901e-12   1.86566e-12\n",
-       "  3.25963e-14   2.70937e-14   8.30911e-14  …  -1.77216e-12  -7.68757e-12\n",
-       " -2.68907e-13  -1.39151e-13   9.78274e-15     -9.53175e-13   2.7986e-12 \n",
-       "  3.03125e-13   1.1986e-13    1.08301e-13     -2.58933e-12   2.82703e-12\n",
-       " -1.44994e-13  -2.08831e-13   1.28502e-13     -4.63911e-12  -1.39255e-12\n",
-       "  4.70581e-13   7.84038e-13   5.21337e-13      4.43798e-12   7.30641e-12\n",
-       " -6.78035e-14  -2.35254e-13   4.13136e-14  …   1.49658e-12  -2.00487e-13\n",
-       "  3.34669e-13  -2.37874e-14  -5.36644e-14      1.16765e-12   4.55034e-12\n",
-       " -2.53692e-13   3.51089e-15  -3.95541e-14     -1.1474e-11   -2.97288e-12\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       "  1.37517e-13  -6.50083e-14  -1.63166e-14      9.21605e-12   2.38365e-12\n",
-       " -1.28414e-13   4.97194e-15  -2.4584e-14   …   1.72347e-12  -5.29245e-12\n",
-       " -8.7655e-14   -1.17995e-13  -1.20156e-13     -3.38787e-12  -3.37871e-12\n",
-       " -4.03409e-13  -1.34634e-13  -5.83864e-14      1.00392e-12   4.32114e-12\n",
-       "  8.26024e-14   1.00125e-13   9.7155e-14      -1.0515e-12   -5.22066e-12\n",
-       " -1.50804e-13   8.60393e-14   6.82848e-14     -1.03518e-12   2.04828e-12\n",
-       " -2.15736e-13   2.05261e-14   6.80992e-14  …  -1.05728e-12   2.49744e-12\n",
-       "  1.46998e-14   1.50217e-13   1.26453e-13      6.68385e-12  -7.51688e-13\n",
-       " -6.59612e-14   5.81129e-14  -8.17648e-14     -6.01281e-12  -9.69549e-13\n",
-       " -6.67356e-15  -2.27055e-13  -1.897e-14        6.36836e-13   4.99036e-12\n",
-       "  1.90835e-13   1.19214e-13  -1.63545e-13      7.64564e-12   5.3586e-12 \n",
-       " -7.10209e-14   3.36438e-14   2.05117e-13  …   5.8015e-13    2.68678e-12\n",
-       "\n",
-       "[:, :, 320] =\n",
-       " -4.22019e-13  -3.61761e-13  -4.94476e-13  …   1.04001e-12   3.43174e-13\n",
-       " -1.43232e-13   5.05563e-14   5.95875e-14      1.50132e-13  -3.67604e-12\n",
-       "  1.68001e-13   1.45024e-13   2.06904e-13      4.79497e-13  -2.44344e-12\n",
-       " -1.08723e-13  -9.69651e-14  -9.05118e-14     -4.67068e-12  -2.70552e-13\n",
-       "  1.3611e-13    1.78584e-13   1.17702e-13     -3.02921e-13   3.69804e-12\n",
-       " -1.85499e-14  -4.67546e-14  -1.45866e-14  …  -1.91592e-12  -7.47547e-12\n",
-       " -2.01131e-13  -8.8166e-14    7.36171e-14     -1.44207e-12   2.56722e-12\n",
-       "  3.13581e-13   1.29527e-13   1.20395e-13     -2.21052e-12   2.87393e-12\n",
-       " -1.24424e-13  -2.25128e-13   1.04254e-13     -5.095e-12    -1.70637e-12\n",
-       "  4.0976e-13    7.77492e-13   4.77588e-13      5.23387e-12   8.32471e-12\n",
-       " -6.31311e-14  -2.66283e-13  -1.37061e-14  …   9.67361e-13  -5.69776e-13\n",
-       "  3.67442e-13   2.34151e-14  -2.841e-14        2.4978e-12    6.50152e-12\n",
-       " -3.01554e-13  -4.3567e-14   -7.47557e-14     -1.21e-11     -4.10497e-12\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       "  2.08696e-13   2.2674e-14    8.06674e-14      9.2314e-12    2.47459e-12\n",
-       " -9.93104e-14   3.04901e-14   4.91177e-14  …  -5.77925e-13  -7.13538e-12\n",
-       " -4.70891e-14  -8.13323e-14  -8.18036e-14     -4.21714e-12  -2.59495e-12\n",
-       " -3.88769e-13  -1.25127e-13  -9.27663e-14      1.17044e-12   5.13551e-12\n",
-       "  1.23803e-13   1.50373e-13   1.60918e-13     -1.28552e-12  -4.98651e-12\n",
-       " -1.21314e-13   1.13799e-13   9.32502e-14     -1.45351e-12   9.40911e-13\n",
-       " -1.50852e-13   5.67419e-14   1.23239e-13  …   1.33167e-12   4.45398e-12\n",
-       " -3.12014e-14   8.67992e-14   3.57291e-14      5.71875e-12  -6.11947e-13\n",
-       " -8.27646e-14   3.87546e-14  -7.75419e-14     -5.63462e-12  -4.7476e-13 \n",
-       " -2.56694e-14  -2.48709e-13  -3.63944e-14      1.52679e-13   5.19447e-12\n",
-       "  2.75567e-13   1.82681e-13  -8.27663e-14      6.29577e-12   3.63729e-12\n",
-       " -4.40924e-14   1.00624e-13   2.69679e-13  …  -2.54778e-13   1.26577e-12\n",
-       "\n",
-       "[:, :, 321] =\n",
-       " -3.30982e-13  -2.86584e-13  -3.78859e-13  …   5.18489e-13  -3.68334e-13\n",
-       " -2.49064e-13  -4.04794e-14  -3.41695e-14      2.38613e-13  -3.90981e-12\n",
-       "  2.10489e-13   1.68757e-13   2.33941e-13     -3.16167e-14  -1.66733e-12\n",
-       " -5.55593e-14  -4.85664e-14  -3.69185e-14     -4.18302e-12  -3.09137e-13\n",
-       "  1.20123e-13   1.3746e-13    1.05671e-13      5.91018e-13   5.7184e-12 \n",
-       " -6.55152e-14  -1.1152e-13   -1.08384e-13  …  -1.95599e-12  -7.42103e-12\n",
-       " -1.4034e-13   -4.26688e-14   1.34207e-13     -1.85381e-12   1.6157e-12 \n",
-       "  3.23118e-13   1.34966e-13   1.37824e-13     -1.81251e-12   2.92312e-12\n",
-       " -1.23128e-13  -2.67619e-13   5.65422e-14     -5.12268e-12  -1.62017e-12\n",
-       "  3.45346e-13   7.95079e-13   4.77271e-13      4.88035e-12   8.4563e-12 \n",
-       " -6.61963e-14  -3.05724e-13  -8.76948e-14  …   4.89019e-13  -7.46939e-13\n",
-       "  3.90464e-13   5.31739e-14  -1.95739e-14      3.57321e-12   7.75266e-12\n",
-       " -3.57409e-13  -1.18454e-13  -1.33871e-13     -1.28935e-11  -5.29811e-12\n",
-       "  ⋮                                        ⋱                 ⋮          \n",
-       "  2.79564e-13   1.29023e-13   1.97972e-13      8.72357e-12   2.56324e-12\n",
-       " -8.59703e-14   5.93607e-14   1.14205e-13  …  -2.98799e-12  -8.44916e-12\n",
-       " -1.73455e-14  -4.77392e-14  -6.05777e-14     -5.68372e-12  -2.46637e-12\n",
-       " -3.69926e-13  -1.15221e-13  -1.43524e-13      2.28089e-12   6.72722e-12\n",
-       "  1.95414e-13   2.25995e-13   2.54525e-13     -2.20615e-12  -5.71956e-12\n",
-       " -4.12374e-14   1.75475e-13   1.42378e-13     -1.72886e-12  -3.7098e-13 \n",
-       " -6.66069e-14   8.68269e-14   1.60487e-13  …   3.72462e-12   7.01027e-12\n",
-       " -6.58812e-14   3.73149e-14  -3.14947e-14      4.40463e-12  -1.65578e-12\n",
-       " -5.61948e-14   5.18586e-14  -5.08713e-14     -4.85041e-12   3.54531e-13\n",
-       " -4.71137e-14  -2.51865e-13  -5.02749e-14      3.01552e-13   5.44717e-12\n",
-       "  3.35119e-13   2.3989e-13   -4.48402e-16      4.41344e-12   1.50553e-12\n",
-       " -2.36973e-14   1.56124e-13   3.18583e-13  …  -7.59446e-13  -3.67421e-13"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sub1.meg[\"trial\"]"
+    "include(\"readData.jl\")\n",
+    ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "430-element Array{Float64,1}:\n",
-       "   2.0\n",
-       "   2.0\n",
-       "   2.0\n",
-       "   1.0\n",
-       "   2.0\n",
-       "   2.0\n",
-       "   1.0\n",
-       "   1.0\n",
-       "   2.0\n",
-       "   2.0\n",
-       "   1.0\n",
-       "   1.0\n",
-       "   2.0\n",
-       "   ⋮  \n",
-       "   2.0\n",
-       "   2.0\n",
-       "   1.0\n",
-       "   2.0\n",
-       "   2.0\n",
-       " NaN  \n",
-       "   1.0\n",
-       "   1.0\n",
-       "   1.0\n",
-       "   1.0\n",
-       "   2.0\n",
-       "   2.0"
-      ]
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "getSeqForBlock(sub1, 1)"
+    "function transformMatToJLD()\n",
+    "    for s in 1:18\n",
+    "        println(\"subject $s\")\n",
+    "        subject = loadSubjectData(getFilename(s))\n",
+    "        @save @sprintf(\"../../../../../../Documents/human_sequence_inference_data/jld2/subject%s.jld2\", lpad(s, 2, \"0\")) subject\n",
+    "    end\n",
+    "end\n",
+    ";"
    ]
   }
  ],
