Refactor, Add inference over m

--- a/src/compare.ipynb
+++ b/src/compare.ipynb
@@ -10,7 +10,12 @@
     "\n",
     "include(\"decode.jl\")\n",
     "include(\"utils.jl\")\n",
-    "include(\"updateRule.jl\");"
+    "\n",
+    "include(\"UpdateRule.jl\")\n",
+    "include(\"Leaky.jl\")\n",
+    "include(\"VarSMiLe.jl\")\n",
+    "include(\"ParticleFiltering.jl\")\n",
+    ";"
    ]
   },
   {
@@ -29,13 +34,13 @@
    "outputs": [],
    "source": [
     "function computeSBFAndTheta(rule, x_t, col)\n",
-    "   return rule.computeSBF(x_t, col, alpha_0[:,col])\n",
+    "   return rule.getsbf(x_t, col, alpha_0[:,col])\n",
     "end\n",
     "\n",
-    "function decodeSurprise(seq, m, alpha_0, rule, ignoreFirstM = true)\n",
+    "function decodeSurprise(seq, m, alpha_0, rule, ignore_partial_window = true)\n",
     "    function computeSBFAndTheta(rule, x_t, col)\n",
-    "        sbf = rule.computeSBF(x_t, col, alpha_0[:,col])\n",
-    "        theta = 1 - rule.computeTheta(col)\n",
+    "        sbf = rule.getsbf(x_t, col, alpha_0[:,col])\n",
+    "        theta = 1 - rule.gettheta(col)\n",
     "        return (sbf, theta) \n",
     "    end\n",
     "    \n",
@@ -44,8 +49,9 @@
     "    callback = Callback(computeSBFAndTheta, returnType)\n",
     "\n",
     "    # decode sequence\n",
-    "    values = decode(seq, m, alpha_0, rule;\n",
-    "                    callback = callback, ignoreFirstM = ignoreFirstM)\n",
+    "    values = decode(seq, m, alpha_0, rule,\n",
+    "                    callback = callback,\n",
+    "                    ignore_partial_window = ignore_partial_window)\n",
     "    \n",
     "    if ignoreFirstM && m > 0\n",
     "        values[1:m] .= Ref{returnType}((1.0, 0.5))\n",
